--- a/styles/style.css
+++ b/styles/style.css
@@ -45,9 +45,17 @@ h2::before {
 }
 .header__right {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
     flex-grow: .2;
 }
+.header__right :nth-child(1){
+    margin-right: 10px;
+}
+.header__icon span  {
+    display: none;
+}
+
+
 .main {
     background-color: #F8F8F8;
 }
@@ -56,7 +64,7 @@ h2::before {
     overflow: scroll;
     padding: 20px 10px;
 }
-.main__p {
+.main__subtitle {
     order: -1;
     padding: 10px 10px 0 20px;
     font-size: 14px;
@@ -83,6 +91,12 @@ h2::before {
     justify-content: space-between;
     padding: 30px 0;
 }
+.main__laptop {
+    display:none;
+}
+.main__pc {
+    display: none;
+}
 .main__buttonRead {
     order: -1;
     display: flex;
@@ -107,12 +121,15 @@ h2::before {
         align-items: flex-start;
         flex-wrap: wrap;
     }
-    .main__p {
+    .main__subtitle {
         align-self: flex-start;
         flex-grow: 1;
         width: 50%;
+        font-size: 16px;
     }
-    
+    .main__laptop {
+        display: block;
+    }
     .main__img {
       align-self: flex-end;
       flex-grow: 1;
@@ -120,9 +137,34 @@ h2::before {
    
     .main__buttonRead {
        order: 1;
-       margin: -80px 0 0 30px;
+       margin: -30px 0 0 30px;
     }
 }
 @media(min-width:1120px){
-
+    body{
+        min-width: 1120px;
+    }
+    .header__right {
+        justify-content: space-between;
+    }
+    .header__right :nth-child(1){
+        margin-right: 0;
+    }
+    .header__icon{
+        display: flex;
+        align-items:center;
+        justify-content: flex-end;
+    }
+    .header__icon img{
+        margin-left: 20px;
+    }
+    .header__icon span  {
+        display: block;
+    }
+    .main__pc {
+        display: block;
+    }
+    .main__subtitle {
+        width: 60%;
+    }
 }
