--- a/styles/style2.css
+++ b/styles/style2.css
@@ -14,14 +14,14 @@
 }
 
 body {
-    height: 1000px;
+    height: auto;
     margin: 0;
     padding: 0;
     font-family: 'TT Lakes Medium';
 }
 .menu{
-    position: fixed;
-    height: 100vh;
+    position: absolute;
+    height: auto;
     width: 320px;
     box-shadow: -2px 0px 4px rgba(69, 79, 126, 0.02), 16px 0px 52px rgba(14, 24, 80, 0.2);
     background-color: #fff;
@@ -161,6 +161,7 @@ a:hover::before {
 }
 .menu__languageBlock {
     cursor: pointer;
+    margin-bottom: 15px;
 }
 .menu__languageBlock span:nth-child(2), .menu__languageBlock span:nth-child(3) {
     margin-left: 7px;
