--- a/styles/style3.css
+++ b/styles/style3.css
@@ -64,7 +64,7 @@ body {
 
 .slider__oneSlider {
     display: flex;
-    /* flex-basis: 240px; */
+    flex-basis: 240px;
     justify-content: space-between;
     min-width: 240px;
     padding: 20px 0 20px 16px;
@@ -89,8 +89,8 @@ body {
 .slider__dots {
     display: flex;
     justify-content: center;
-    position: absolute;
-    margin-top: 120px;
+    /* position: absolute; */
+    /* margin-top: 120px; */
     width: 320px;
     margin-left: 50%;
     transform: translateX(-50%);
@@ -114,7 +114,7 @@ body {
 }
 
 .activeDot {
-    background-color: #B5B6BC;
+    background-color: #DDDDDD;
 }
 
 .slider__dot:hover {
@@ -137,6 +137,9 @@ body {
     -ms-transform: scale(1.3);
     -o-transform: scale(1.3);
 }
+.swiper-pagination-bullet-active {
+    background-color: #B5B6BC;
+}
 
 @media(min-width: 768px) {
     .slider__wrapper {
@@ -156,8 +159,18 @@ body {
     }
 
     .slider__oneSlider {
-        min-width: auto;
+        min-width: 224px;
         margin: 0 10px;
+    }
+    .slider__oneSlider img {
+        max-width: 50%;
+    }
+    .swiper-slide {
+        width: auto;
+        height: auto;
+    }
+    .slider__slides {
+        margin: 0 0;
     }
 
     .slide__slide_hidden {
@@ -167,23 +180,32 @@ body {
     .slider__dots {
         display: none;
     }
+    
 
     .open {
-        display: block;
+        display: flex;
     }
-    
+    .slider__oneSlider:nth-child(n+7){
+        display: none;
+    }
 
 }
 
 @media(min-width: 1120px) {
-    /* .slider__oneSlider:nth-child(n+9) {
-        display: none;
-    } */
     .slider__slides {
         display: grid;
         margin: 0 10px;
         gap: 10px;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr;
+    }
+    .slider__oneSlider:nth-child(n+7){
+        display: flex;
+    }
+    .slider__oneSlider:nth-child(n+9){
+        display: none;
+    }
+    .slider__slides {
+        margin: 0 0;
     }
 }
