--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,34 @@
     font-style: normal;
     font-display: swap;
 }
+@font-face {
+    font-family: 'TT Lakes Medium';
+    src: url('../fonts/TTLakes-Medium.woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'TT Lakes Regular';
+    src: url('../fonts/TTLakes-Regular.woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'TT Lakes Medium';
+    src: url('../fonts/TTLakes-Medium.woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'TT Lakes BoldItalic';
+    src: url('../fonts/TTLakes-BoldItalic.woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
 
 body {
     width: 100%;
@@ -196,6 +224,297 @@ h2::before {
     display: none;
 }
 
+/* slider */
+.slider h2 {
+    font-family: 'TT Lakes Regular';
+    font-size: 16px;
+    line-height: 24px;
+    text-transform: uppercase;
+    color: #7E7E82;
+    background: linear-gradient(270deg, #F8F8F8 0%, #FFFFFF 98.61%);
+    margin: 0;
+    padding: 16px;
+}
+
+.slider {
+    min-width: 320px;
+}
+
+.slider__arrow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border: 2px solid #FF3E79;
+    transition-duration: .5s;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+.slider__arrow:hover {
+    background-color: rgb(220, 217, 217);
+    transition-duration: .5s;
+    transition-timing-function: ease-in-out;
+    transform: rotate(360deg) scale(1.2);
+    -webkit-transform: rotate(360deg) scale(1.2);
+    -moz-transform: rotate(360deg) scale(1.2);
+    -ms-transform: rotate(360deg) scale(1.2);
+    -o-transform: rotate(360deg) scale(1.2);
+}
+
+.slider__wrapper {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    padding: 16px 0 66px;
+    background-color: #F2F2F2;
+}
+
+.slider__oneSlider {
+    display: flex;
+    flex-basis: 240px;
+    justify-content: space-between;
+    align-items: center;
+    min-width: 240px;
+    height: auto;
+    padding: 20px 0 20px 16px;
+    margin: 16px 8px;
+    background-color: #fff;
+    border: 1px solid #EAEAEA;
+    cursor: pointer;
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
+}
+
+.slider__slides {
+    display: flex;
+}
+
+.slider__oneSlider a {
+    padding-right: 16px;
+}
+
+
+.slider__dots {
+    display: flex;
+    justify-content: center;
+    width: 320px;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+}
+
+.slider__dot {
+    width: 12px;
+    height: 12px;
+    margin: 0 0 0 12px;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: #DDDDDD;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.activeDot {
+    background-color: #DDDDDD;
+}
+
+.slider__dot:hover {
+    background-color: #B5B6BC;
+}
+.open, .close {
+    display: flex;
+    align-items: center;
+    margin: 24px 0 0 24px;
+    width: auto;
+}
+
+.open span, .close span {
+    margin-left: 30px;
+}
+.slider__button {
+    display: none;
+    cursor: pointer;
+}
+.slider__button img {
+    transform: scale(1.3);
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+}
+.swiper-pagination-bullet-active {
+    background-color: #B5B6BC;
+}
+/* end slider */
+/* start menu */
+.menu{
+    position: fixed;
+    z-index: 1000;
+    height: auto;
+    width: 320px;
+    box-shadow: -2px 0px 4px rgba(69, 79, 126, 0.02), 16px 0px 52px rgba(14, 24, 80, 0.2);
+    background-color: #fff;
+}
+a {
+    display: flex;
+    text-decoration: none;
+    font-size: 16px;
+    line-height:24px;
+    letter-spacing: -0.2px;
+    color: #1B1C21;
+    padding: 10px 0 0 34px;
+    padding-bottom:16px;
+}
+a:first-child {
+    margin-top: 34px;
+}
+.menu__main a:hover::before {
+    content: "";
+    position: absolute;
+    width: 4px;
+    height: 40px;
+    border: 2px solid #e02424;
+    margin-left: -20px;
+    margin-top: -8px;
+    background-color: #e02424;
+    border-radius: 0 10px 10px 0;
+    -webkit-border-radius: 0 10px 10px 0;
+    -moz-border-radius: 0 10px 10px 0;
+    -ms-border-radius: 0 10px 10px 0;
+    -o-border-radius: 0 10px 10px 0;
+}
+.menu__main_activeLink::before {
+    content: "";
+    position: absolute;
+    width: 4px;
+    height: 40px;
+    border: 2px solid #41F6D7;
+    margin-left: -20px;
+    margin-top: -8px;
+    background-color: #41F6D7;
+    border-radius: 0 10px 10px 0;
+    -webkit-border-radius: 0 10px 10px 0;
+    -moz-border-radius: 0 10px 10px 0;
+    -ms-border-radius: 0 10px 10px 0;
+    -o-border-radius: 0 10px 10px 0;
+}
+.active {
+    color: #7E7E82;
+}
+
+.menu__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+}
+.icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    background-color: #FF3E79;
+    margin: 0 auto;
+    transition: .6s;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+.icon:hover {
+    background-color: #2b0611;
+    transition: .6s;
+    -webkit-transition: .6s;
+    -moz-transition: .6s;
+    -ms-transition: .6s;
+    -o-transition: .6s;
+}
+
+.menu__main {
+    display: flex;
+    flex-direction: column;
+}
+.menu__close {
+    position:relative;
+    left: -20px;
+}
+.menu__topLogo {
+    position:relative;
+    left: -40px;
+}
+.menu__oneIcon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    margin-right: 16px;
+    transition: .6s;
+    cursor: pointer;
+    background-color: #FF3E79;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    -webkit-transition: .6s;
+    -moz-transition: .6s;
+    -ms-transition: .6s;
+    -o-transition: .6s;
+}
+.menu__oneIcon:hover {
+    background-color: #2b0611;
+    transition: .6s;
+    -webkit-transition: .6s;
+    -moz-transition: .6s;
+    -ms-transition: .6s;
+    -o-transition: .6s;
+}
+.menu__infoBlock {
+    margin-left: 34px;
+}
+.menu__email {
+    padding-top: 10px;
+}
+
+.menu__iconsBlock {
+    display: flex;
+    margin-top: 80px;
+}
+.menu__telephone {
+    font-family: 'TT Lakes BoldItalic';
+    font-size: 24px;
+}
+.menu__languageBlock {
+    cursor: pointer;
+    margin-bottom: 15px;
+}
+.menu__languageBlock span:nth-child(2), .menu__languageBlock span:nth-child(3) {
+    margin-left: 7px;
+}
+.menu__langActive {
+    color: #7E7E82;
+}
+.menu__languageBlock span:hover {
+    color: #7E7E82;
+}
+/* end menu */
+
 @media(min-width:768px) {
     body {
         min-width: 768px;
@@ -237,6 +556,52 @@ h2::before {
     .main__slideItem {
         min-width: 240px;
     }
+    /* slider */
+    .slider__wrapper {
+        overflow: hidden;
+    }
+
+    .slider {
+        min-width: 100%;
+    }
+
+    .slider__slides {
+        display: grid;
+        margin: 0 10px;
+        gap: 10px;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .slider__oneSlider {
+        min-width: 224px;
+        margin: 0 10px;
+    }
+    
+    .swiper-slide {
+        width: auto;
+        height: auto;
+    }
+    .slider__slides {
+        margin: 0 0;
+    }
+
+    .slide__slide_hidden {
+        display: none;
+    }
+
+    .slider__dots {
+        display: none;
+    }
+    
+
+    .open {
+        display: flex;
+    }
+    .slider__oneSlider:nth-child(n+7){
+        display: none;
+    }
+    /* endslider */
 }
 
 @media(min-width:1120px) {
@@ -324,5 +689,23 @@ h2::before {
         -ms-border-radius: 50%;
         -o-border-radius: 50%;
     }
+    /* slider */
+    .slider__slides {
+        display: grid;
+        margin: 0 10px;
+        gap: 10px;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+    .slider__oneSlider:nth-child(n+7){
+        display: flex;
+    }
+    .slider__oneSlider:nth-child(n+9){
+        display: none;
+    }
+    .slider__slides {
+        margin: 0 0;
+    }
+    /* endslider */
 
 }
