close and open menu

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,7 @@
     font-style: normal;
     font-display: swap;
 }
+
 @font-face {
     font-family: 'TT Lakes Medium';
     src: url('../fonts/TTLakes-Medium.woff');
@@ -20,6 +21,7 @@
     font-style: normal;
     font-display: swap;
 }
+
 @font-face {
     font-family: 'TT Lakes Regular';
     src: url('../fonts/TTLakes-Regular.woff');
@@ -27,6 +29,7 @@
     font-style: normal;
     font-display: swap;
 }
+
 @font-face {
     font-family: 'TT Lakes Medium';
     src: url('../fonts/TTLakes-Medium.woff');
@@ -34,6 +37,7 @@
     font-style: normal;
     font-display: swap;
 }
+
 @font-face {
     font-family: 'TT Lakes BoldItalic';
     src: url('../fonts/TTLakes-BoldItalic.woff');
@@ -254,6 +258,7 @@ h2::before {
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
 }
+
 .slider__arrow:hover {
     background-color: rgb(220, 217, 217);
     transition-duration: .5s;
@@ -333,20 +338,25 @@ h2::before {
 .slider__dot:hover {
     background-color: #B5B6BC;
 }
-.open, .close {
+
+.open,
+.close {
     display: flex;
     align-items: center;
     margin: 24px 0 0 24px;
     width: auto;
 }
 
-.open span, .close span {
+.open span,
+.close span {
     margin-left: 30px;
 }
+
 .slider__button {
     display: none;
     cursor: pointer;
 }
+
 .slider__button img {
     transform: scale(1.3);
     -webkit-transform: scale(1.3);
@@ -354,32 +364,57 @@ h2::before {
     -ms-transform: scale(1.3);
     -o-transform: scale(1.3);
 }
+
 .swiper-pagination-bullet-active {
     background-color: #B5B6BC;
 }
+
 /* end slider */
 /* start menu */
-.menu{
+.menu {
+    visibility: hidden;
     position: fixed;
+    opacity: .4;
+    transition-duration: .3s;
+    transition-timing-function: ease-in;
     z-index: 1000;
-    height: auto;
     width: 320px;
+    transform: translateX(-100%);
     box-shadow: -2px 0px 4px rgba(69, 79, 126, 0.02), 16px 0px 52px rgba(14, 24, 80, 0.2);
     background-color: #fff;
+    -webkit-transform: translateX(-100%);
+    -moz-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
 }
+
+.menu__open {
+    visibility: visible;
+    transition-duration: .3s;
+    transition-timing-function: ease-in;
+    transform: translateX(0%);
+    opacity: 1;
+    -webkit-transform: translateX(0%);
+    -moz-transform: translateX(0%);
+    -ms-transform: translateX(0%);
+    -o-transform: translateX(0%);
+}
+
 a {
     display: flex;
     text-decoration: none;
     font-size: 16px;
-    line-height:24px;
+    line-height: 24px;
     letter-spacing: -0.2px;
     color: #1B1C21;
     padding: 10px 0 0 34px;
-    padding-bottom:16px;
+    padding-bottom: 16px;
 }
+
 a:first-child {
     margin-top: 34px;
 }
+
 .menu__main a:hover::before {
     content: "";
     position: absolute;
@@ -395,6 +430,7 @@ a:first-child {
     -ms-border-radius: 0 10px 10px 0;
     -o-border-radius: 0 10px 10px 0;
 }
+
 .menu__main_activeLink::before {
     content: "";
     position: absolute;
@@ -410,6 +446,7 @@ a:first-child {
     -ms-border-radius: 0 10px 10px 0;
     -o-border-radius: 0 10px 10px 0;
 }
+
 .active {
     color: #7E7E82;
 }
@@ -420,15 +457,14 @@ a:first-child {
     align-items: center;
     padding-top: 20px;
 }
+
 .icon {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
     cursor: pointer;
     background-color: #FF3E79;
-    margin: 0 auto;
+    margin: 0 10px 0 30px;
     transition: .6s;
     border-radius: 50%;
     -webkit-border-radius: 50%;
@@ -436,6 +472,7 @@ a:first-child {
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
 }
+
 .icon:hover {
     background-color: #2b0611;
     transition: .6s;
@@ -449,14 +486,17 @@ a:first-child {
     display: flex;
     flex-direction: column;
 }
+
 .menu__close {
-    position:relative;
+    position: relative;
     left: -20px;
 }
+
 .menu__topLogo {
-    position:relative;
+    position: relative;
     left: -40px;
 }
+
 .menu__oneIcon {
     display: flex;
     justify-content: center;
@@ -477,6 +517,7 @@ a:first-child {
     -ms-transition: .6s;
     -o-transition: .6s;
 }
+
 .menu__oneIcon:hover {
     background-color: #2b0611;
     transition: .6s;
@@ -485,9 +526,11 @@ a:first-child {
     -ms-transition: .6s;
     -o-transition: .6s;
 }
+
 .menu__infoBlock {
     margin-left: 34px;
 }
+
 .menu__email {
     padding-top: 10px;
 }
@@ -496,23 +539,30 @@ a:first-child {
     display: flex;
     margin-top: 80px;
 }
+
 .menu__telephone {
     font-family: 'TT Lakes BoldItalic';
     font-size: 24px;
 }
+
 .menu__languageBlock {
     cursor: pointer;
     margin-bottom: 15px;
 }
-.menu__languageBlock span:nth-child(2), .menu__languageBlock span:nth-child(3) {
+
+.menu__languageBlock span:nth-child(2),
+.menu__languageBlock span:nth-child(3) {
     margin-left: 7px;
 }
+
 .menu__langActive {
     color: #7E7E82;
 }
+
 .menu__languageBlock span:hover {
     color: #7E7E82;
 }
+
 /* end menu */
 
 @media(min-width:768px) {
@@ -556,6 +606,7 @@ a:first-child {
     .main__slideItem {
         min-width: 240px;
     }
+
     /* slider */
     .slider__wrapper {
         overflow: hidden;
@@ -577,11 +628,12 @@ a:first-child {
         min-width: 224px;
         margin: 0 10px;
     }
-    
+
     .swiper-slide {
         width: auto;
         height: auto;
     }
+
     .slider__slides {
         margin: 0 0;
     }
@@ -593,14 +645,16 @@ a:first-child {
     .slider__dots {
         display: none;
     }
-    
+
 
     .open {
         display: flex;
     }
-    .slider__oneSlider:nth-child(n+7){
+
+    .slider__oneSlider:nth-child(n+7) {
         display: none;
     }
+
     /* endslider */
 }
 
@@ -689,6 +743,7 @@ a:first-child {
         -ms-border-radius: 50%;
         -o-border-radius: 50%;
     }
+
     /* slider */
     .slider__slides {
         display: grid;
@@ -697,15 +752,31 @@ a:first-child {
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr;
     }
-    .slider__oneSlider:nth-child(n+7){
+
+    .slider__oneSlider:nth-child(n+7) {
         display: flex;
     }
-    .slider__oneSlider:nth-child(n+9){
+
+    .slider__oneSlider:nth-child(n+9) {
         display: none;
     }
+
     .slider__slides {
         margin: 0 0;
     }
-    /* endslider */
 
+    /* endslider */
+    .menu {
+        transform: translateX(0%);
+        visibility: visible;
+        opacity: 1;
+        height: 100vh;
+        -webkit-transform: translateX(0%);
+        -moz-transform: translateX(0%);
+        -ms-transform: translateX(0%);
+        -o-transform: translateX(0%);
+    }
+    header, main {
+        padding-left: 320px;
+    }
 }
