--- a/styles/style.css
+++ b/styles/style.css
@@ -62,12 +62,12 @@ h2 {
     font-family: 'TT Lakes Bold';
 }
 
-h2::before {
+.main__top_pc h2::before {
     content: "";
     position: absolute;
     width: 4px;
     height: 40px;
-    border: 2px solid #41F6D7;
+    border: 1px solid #41F6D7;
     margin-left: -20px;
     margin-top: -4px;
     background-color: #41F6D7;
@@ -235,7 +235,7 @@ h2::before {
     line-height: 24px;
     text-transform: uppercase;
     color: #7E7E82;
-    background: linear-gradient(270deg, #F8F8F8 0%, #FFFFFF 98.61%);
+    background: linear-gradient(270deg, #FFFFFF 0%, #F8F8F8 98.61%);
     margin: 0;
     padding: 16px;
 }
@@ -464,7 +464,7 @@ a:first-child {
     align-items: center;
     cursor: pointer;
     background-color: #FF3E79;
-    margin: 0 10px 0 30px;
+    margin: 0 0px 0 10px;
     transition: .6s;
     border-radius: 50%;
     -webkit-border-radius: 50%;
@@ -472,6 +472,7 @@ a:first-child {
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
 }
+
 
 .icon:hover {
     background-color: #2b0611;
@@ -489,7 +490,8 @@ a:first-child {
 
 .menu__close {
     position: relative;
-    left: -20px;
+    margin:10px;
+    /* left: -20px; */
 }
 
 .menu__topLogo {
@@ -658,7 +660,7 @@ a:first-child {
     /* endslider */
 }
 
-@media(min-width:1120px) {
+@media(min-width:1440px) {
     body {
         min-width: 1120px;
     }
@@ -745,13 +747,24 @@ a:first-child {
     }
 
     /* slider */
+    
     .slider__slides {
         display: grid;
-        margin: 0 10px;
-        gap: 10px;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        min-width: 1120px;
+        margin: 0 0;
+        gap: 20px;
+        margin-left: 6%;
+        grid-template-columns: 20% 20% 20% 20%;
+        justify-content: center;
         grid-template-rows: 1fr 1fr;
     }
+    .slider h2 {
+        margin-left: 165px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+    }
+   
 
     .slider__oneSlider:nth-child(n+7) {
         display: flex;
@@ -760,9 +773,8 @@ a:first-child {
     .slider__oneSlider:nth-child(n+9) {
         display: none;
     }
-
-    .slider__slides {
-        margin: 0 0;
+    .open, .close {
+        margin: 24px 0 0 15%
     }
 
     /* endslider */
@@ -777,6 +789,6 @@ a:first-child {
         -o-transform: translateX(0%);
     }
     header, main {
-        padding-left: 320px;
+        margin-left: 160px;
     }
 }
