--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,7 @@ body {
     font-family: 'TT Lakes Regular';
     font-weight: 900;
     box-sizing: border-box;
+    background-color: #fff;
 }
 
 h2 {
@@ -616,8 +617,10 @@ a:first-child {
 /* end techslider */
 /* priceSlider */
 .price__slider {
+    position: relative;
     background-color: #F8F8F8;
-    overflow: auto;
+    overflow: hidden;
+    padding: 30px 0 50px 0;
 }
 
 .price__onePrice {
@@ -636,6 +639,7 @@ a:first-child {
     display: flex;
     flex-direction: column;
     margin-left: 16px;
+    cursor: pointer;
 }
 
 .price__time {
@@ -691,6 +695,23 @@ a:first-child {
     -ms-border-radius: 16px;
     -o-border-radius: 16px;
 }
+
+.price__dots {
+    position: absolute;
+    width: auto !important;
+    margin-left: 50%;
+    margin-top: 20px;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+}
+
+.price__table {
+    display: none;
+}
+
 
 
 /* end priceSlider */
@@ -805,6 +826,92 @@ a:first-child {
     }
 
     /* end techslider */
+    /* price slider */
+    .price__slider {
+        display: none;
+    }
+    .price h2 {
+        display: block;
+    }
+    .price__insetBlock {
+        position: relative;
+        width: 90%;
+        margin-left: 5%;
+    }
+
+    .price {
+        background-color: #F8F8F8;
+        padding: 30px 0;
+    }
+
+    .price__table {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        color: #1B1C21;
+        font-family: 'TT Lakes Regular';
+        font-size: 14px;
+        line-height: 18px;
+        letter-spacing: 0.2px;
+        background: #F8F8F8;
+    }
+
+    .price__wrapper {
+        width: 95%;
+        margin-left: 2.5%;
+        background-color: #fff;
+        border-radius: 6px;
+        -webkit-border-radius: 6px;
+        -moz-border-radius: 6px;
+        -ms-border-radius: 6px;
+        -o-border-radius: 6px;
+}
+
+    .price__row {
+        display: grid;
+        grid-template-columns: 4fr 1fr 1fr 1fr;
+        background-color: #fff;
+        padding: 16px 0
+    }
+
+    .topRow {
+        display: grid;
+        grid-template-columns: 4fr 1fr 1fr 1fr;
+        width: 90%;
+        margin-left: 5%;
+        color: #7E7E82;
+        font-family: 'TT Lakes Medium';
+        background-color: #F8F8F8;
+    }
+
+    .line {
+        width: 100%;
+        height: 1px;
+        background-color: #EAEAEA;
+        position: absolute;
+        /* margin-left:9%; */
+        z-index: 10;
+    }
+
+    .price__button {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        color: #fff;
+        margin-top: 10px;
+        background-color: #FF3E79;
+        border-radius: 20px;
+        height: 32px;
+        font-size: 12px;
+        cursor: pointer;
+        font-family: 'TT Lakes Bold';
+        text-transform: uppercase;
+        -webkit-border-radius: 20px;
+        -moz-border-radius: 20px;
+        -ms-border-radius: 20px;
+        -o-border-radius: 20px;
+    }
+    /* end price block */
 }
 
 @media(min-width:1440px) {
