--- a/styles/style.css
+++ b/styles/style.css
@@ -368,6 +368,7 @@ h2 {
     transition-timing-function: ease-in;
     z-index: 1000;
     width: 100%;
+    height: 100vh;
     transform: translateX(-100%);
     box-shadow: -2px 0px 4px rgba(69, 79, 126, 0.02), 16px 0px 52px rgba(14, 24, 80, 0.2);
     background-color: #fff;
