--- a/styles/style.css
+++ b/styles/style.css
@@ -759,7 +759,7 @@ a {
 
 /* end priceSlider */
 /* footer */
-.footer{
+.footer {
     display: flex;
     flex-direction: column;
     background-color: #F8F8F8;
@@ -771,6 +771,7 @@ a {
     mix-blend-mode: normal;
     text-align: center;
 }
+
 .footer a {
     color: #7E7E82;
     text-align: center;
@@ -778,17 +779,167 @@ a {
     padding: 0;
     opacity: 0.72;
 }
+
 .footer span {
     opacity: 0.72;
 }
+
 .copyright {
     display: flex;
     flex-direction: column;
 }
+
 .footer__oneBlock {
     padding: 10px 10px;
 }
 
+/* end footer */
+/* feedBack*/
+.modalFeedBack {
+    position: fixed;
+    transform: translateX(100%);
+    transition-duration: .5s;
+    right: 0;
+    padding: 0;
+    margin: 0;
+    z-index: 10000;
+    width: 100%;
+    height: 100vh;
+    background-color: #fff;
+    -webkit-transform: translateX(100%);
+    -moz-transform: translateX(100%);
+    -ms-transform: translateX(100%);
+    -o-transform: translateX(100%);
+}
+.modalFeedBack__active {
+    transform: translateX(0);
+    transition-duration: .5s;
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+}
+
+.modalFeedBack__close {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    margin: 24px 0 0 16px;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    background-color: #FF3E79;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.modalFeedBack h3 {
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: -0.6px;
+    color: #1B1C21;
+    margin-left: 12px;
+    font-weight: 900;
+    font-family: 'TT Lakes Bold';
+}
+
+.modalFeedBack__info span,
+.modalFeedBack__info span a {
+    display: inline;
+    font-family: 'TT Lakes Medium';
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
+    color: #7E7E82;
+}
+
+.modalFeedBack__info span a {
+    color: #FF3E79;
+}
+
+.modalFeedBack h3::before {
+    content: '';
+    position: absolute;
+    background-color: #41F6D7;
+    width: 6px;
+    height: 40px;
+    margin-left: -12px;
+    margin-top: -5px;
+    border-radius: 5px 0 0 5px;
+    transform: matrix(-1, 0, 0, 1, 0, 0);
+    -webkit-border-radius: 5px 0 0 5px;
+    -moz-border-radius: 5px 0 0 5px;
+    -ms-border-radius: 5px 0 0 5px;
+    -o-border-radius: 5px 0 0 5px;
+}
+
+.modalFeedBack__wrapper {
+    width: 90%;
+    margin-left: 5%;
+}
+
+input,
+textarea {
+    padding: 12px 0 12px 16px;
+    color: #B5B6BC;
+    font-family: 'TT Lakes Medium';
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.2px;
+    border: 1px solid #EAEAEA;
+    border-radius: 8px;
+    margin: 8px 0;
+}
+
+input:focus,
+textarea:focus {
+    border-color: #333;
+}
+
+.modalFeedBack__wrapper form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.modalFeedBack__wrapper form textarea {
+    height: 120px;
+    resize: none;
+}
+
+.modalFeddBack__buttonBlock {
+    display: flex;
+    justify-content: end;
+}
+
+.submit {
+    display: flex;
+    justify-content: space-evenly;
+    width: 140px;
+    border: none;
+    font-size: 14px;
+    color: #fff;
+    background-color: #FF3E79;
+    font-family: 'TT Lakes Bold';
+    line-height: auto;
+    cursor: pointer;
+    padding: 10px 18px;
+    text-transform: uppercase;
+    border-radius: 16px;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
+}
+
+.submit img {
+    padding-left: 20px;
+}
+
+/* end feedback */
 
 @media(min-width:768px) {
     body {
@@ -997,14 +1148,20 @@ a {
     .price__infoBlock {
         background-color: #F8F8F8;
     }
+
     /* end price block */
     .footer {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         padding: 0 10px 0 10px;
     }
+
     .footer__oneBlock:nth-child(3) {
         text-align: right;
+    }
+    /* modalFeedback */
+    .modalFeedBack {
+        width: 320px;
     }
 }
 
@@ -1176,10 +1333,12 @@ a {
     .price h2 {
         margin-left: 140px;
     }
+
     /* footer */
     .footer {
         margin-left: 160px;
     }
+
     .footer__oneBlock:nth-child(1) {
         text-align: left;
     }
