--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,11 @@ body {
     box-sizing: border-box;
     background-color: #fff;
 }
+.body_close {
+    filter: blur(5px);
+    position: fixed;
+    -webkit-filter: blur(5px);
+}
 
 h2 {
     display: inline-block;
@@ -1291,15 +1296,15 @@ textarea:focus {
 
     .main__icon {
         display: flex;
-        justify-content: flex-end;
+        justify-content: center;
         align-items: center;
     }
 
     .main__icon img {
         background-color: #FF3E79;
-        width: 30px;
-        height: 30px;
-        padding: 10px;
+        width: auto;
+        height: auto;
+        padding: 15px;
         margin-left: 20px;
         border-radius: 50%;
         -webkit-border-radius: 50%;
