--- a/styles/style.css
+++ b/styles/style.css
@@ -339,7 +339,7 @@ h2 {
     display: flex;
     align-items: center;
     margin: 24px 0 0 24px;
-    width: auto;
+    width: 150px;
 }
 
 .open span,
