--- a/styles/style.css
+++ b/styles/style.css
@@ -341,6 +341,9 @@ h2 {
     margin: 24px 0 0 24px;
     width: 150px;
 }
+.close {
+    width: 100px;
+}
 
 .open span,
 .close span {
@@ -897,7 +900,7 @@ textarea {
     letter-spacing: -0.2px;
     border: 1px solid #EAEAEA;
     border-radius: 8px;
-    margin: 8px 0;
+    margin: 6px 0;
 }
 
 input:focus,
@@ -912,7 +915,7 @@ textarea:focus {
 }
 
 .modalFeedBack__wrapper form textarea {
-    height: 120px;
+    height: 110px;
     resize: none;
 }
 
